Endpoint - get invoice by id
