# pkg/swagger/docs/swagger.yaml
@@ -2395,6 +2395,46 @@ paths:
       summary: To create an invoice
       tags:
       - Invoice
+  /invoice/{id}:
+    get:
+      consumes:
+      - application/json
+      description: To get a invoice
+      parameters:
+      - description: Invoice ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - type: object
+            - properties:
+                data:
+                  $ref: '#/definitions/invoice.Invoice'
+                status:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/shared.Response'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/shared.Response'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/shared.Response'
+      summary: To get a invoice
+      tags:
+      - Invoice
   /menu:
     get:
       consumes:
